spacing fix

--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -403,8 +403,6 @@ h2 {
     text-align: center;
     margin: 0 auto;
     padding-top: 0;
-    padding-bottom: 10px;
-    ;
     font-family: 'Poiret One', cursive;
     text-shadow: 0 0 1px #777;
     font-weight: 200;
@@ -1452,14 +1450,15 @@ div[data-game^="0"]:not(.started) {
     background-image: url(https://ygopro.us/img/ocg.png);
     background-size: 100% 100%;
     color: white;
-	background-size: auto 100% !important;
+    background-size: auto 100% !important;
 }
+
 .started[data-game^="0"] {
-  background-image: url(https://ygopro.us/img/faded-ocg.png);
-  background-color: rgba(0, 0, 0, .5) !important;
-  border: 1px solid grey;
-  color: grey;
-  background-size: auto 100% !important;
+    background-image: url(https://ygopro.us/img/faded-ocg.png);
+    background-color: rgba(0, 0, 0, .5) !important;
+    border: 1px solid grey;
+    color: grey;
+    background-size: auto 100% !important;
 }
 
 div[data-game^="1"] {
@@ -1473,14 +1472,15 @@ div[data-game^="1"]:not(.started) {
     background-image: url(https://ygopro.us/img/tcg.png);
     background-size: auto 100% !important;
     color: white;
-	background-size: cover;
+    background-size: cover;
 }
+
 .started[data-game^="1"] {
-  background-image: url(https://ygopro.us/img/faded-tcg.png);
-  background-color: rgba(0, 0, 0, .5) !important;
-  border: 1px solid grey;
-  color: grey;
-  background-size: auto 100% !important;
+    background-image: url(https://ygopro.us/img/faded-tcg.png);
+    background-color: rgba(0, 0, 0, .5) !important;
+    border: 1px solid grey;
+    color: grey;
+    background-size: auto 100% !important;
 }
 
 div[data-game^="2"] {
@@ -1495,12 +1495,13 @@ div[data-game^="2"]:not(.started) {
     background-size: auto 100% !important;
     color: white;
 }
+
 .started[data-game^="2"] {
-  background-image: url(https://ygopro.us/img/faded-tcgocg.png);
-  background-color: rgba(0, 0, 0, .5) !important;
-  border: 1px solid grey;
-  color: grey;
-  background-size: auto 100% !important;
+    background-image: url(https://ygopro.us/img/faded-tcgocg.png);
+    background-color: rgba(0, 0, 0, .5) !important;
+    border: 1px solid grey;
+    color: grey;
+    background-size: auto 100% !important;
 }
 
 div[data-game^="3"]:not(.started) {
@@ -1509,14 +1510,15 @@ div[data-game^="3"]:not(.started) {
     background-image: url(https://ygopro.us/img/anime.png);
     background-size: auto 100% !important;
     color: white;
-	background-size: auto 100% !important;
+    background-size: auto 100% !important;
 }
+
 .started[data-game^="3"] {
-  background-image: url(https://ygopro.us/img/faded-anime.png);
-  background-color: rgba(0, 0, 0, .5) !important;
-  border: 1px solid grey;
-  color: grey;
-  background-size: auto 100% !important;
+    background-image: url(https://ygopro.us/img/faded-anime.png);
+    background-color: rgba(0, 0, 0, .5) !important;
+    border: 1px solid grey;
+    color: grey;
+    background-size: auto 100% !important;
 }
 
 div[data-game^="00"],
@@ -1554,7 +1556,7 @@ div[data-game^="32"] {
     
     background: red;
     font-weight: bold;
-	background-size: auto 100% !important;
+    background-size: auto 100% !important;
     color: white;
     border: 2px;
 }
@@ -1566,7 +1568,7 @@ div[data-game^="32"] {
 .started[data-bad] {
     background: rgba(0, 0, 0, .5) !important;
     border: 1px solid grey;
-	background-size: auto 100% !important;
+    background-size: auto 100% !important;
     color: grey;
 }
 
@@ -1576,13 +1578,13 @@ div[data-game^="32"] {
     background-size: auto 100% !important;
     text-shadow: 0px 0px 19px black;
     background-repeat: no-repeat !important;
-	background-size: cover;
+    background-size: cover;
 }
 
 .started[data-newgioh] {
     background-image: url('../img/outnewgiohtoken.png') !important;
     background-color: rgba(0, 0, 0, .5) !important;
-	background-size: auto 100% !important;
+    background-size: auto 100% !important;
     border: 1px solid grey;
     color: grey;
 }
@@ -1599,7 +1601,7 @@ div[data-game^="32"] {
 .started[data-nostalgia] {
     background-image: url('../img/outnewgiohtoken.png') !important;
     background-color: rgba(0, 0, 0, .5) !important;
-	background-size: auto 100% !important;
+    background-size: auto 100% !important;
     border: 1px solid grey;
     color: grey;
 }
